@@ -26,7 +26,22 @@
             <version>1.27.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.progressive.minds.chimera</groupId>
+            <artifactId>core.api-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M7</version>
+    <configuration>
+        <argLine>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+    </configuration>
+</plugin>
+
 
 
 </project>
